force-app/main/default/objects/Product2/fields/Commodity_code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_code__c</fullName>
    <label>Commodity code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>