force-app/main/default/objects/Product2/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Product</fullName>
            </value>
            <value>
                <fullName>Mast Product</fullName>
            </value>
            <value>
                <fullName>Freight Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>