force-app/main/default/objects/Product2/fields/Search_Key_I__c.field-meta.xml
<CustomField>
    <fullName>Search_Key_I__c</fullName>
    <label>Search Key I</label>
    <length>255</length>
    <type>Text</type>
</CustomField>