force-app/main/default/objects/Product2/fields/Variant_Type__c.field-meta.xml
<CustomField>
    <fullName>Variant_Type__c</fullName>
    <label>Variant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>example</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>